correções
Correção de bugs